# haskelllsystems

./: cabal.project  lsystems.cabal
src/: Examples.hs  LSystems.hs  Renderer.hs
src/IC/: Colour.hs  Graphics.hs
test/: Tests.hs
test/IC/: Approx.hs
