cabal-version:      3.0
-- The name of the package.
name:               lsystems

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           Lab #4 - L-Systems
description:        An exercise to provide experience of working with higher-order functions.

author:             Imperial College London
maintainer:         j.willis19@imperial.ac.uk
build-type:         Simple

common common-settings
    -- Options to pass to GHC, in this case, we want to turn on warnings
    ghc-options: -Wtabs -Wunused-binds -Wmissing-signatures
    -- Base language which the package is written in.
    default-language: Haskell2010
    -- The range of GHC base library verisons that are supported
    build-depends:    base >=4.13 && <5

library
    import:           common-settings
    -- Modules exported by the library.
    exposed-modules:  Renderer, LSystems, Examples, IC.Graphics, IC.Colour
    -- Directories containing source files.
    hs-source-dirs:   src
    -- Turns out, while GHCup installs the right libraries, it doesn't place them on the path
    -- this helps with that :)
    if os(windows)
        extra-lib-dirs: C:/ghcup/msys64/mingw64/bin
    -- Turns out, on Macs, the graphics library cannot run on a separate thread, which GHCi does
    -- this disables that behaviour so it can work properly.
    if os(darwin)
        ghc-options:  -fno-ghci-sandbox
    build-depends:    GLUT >=2.7 && <2.8

common test-common
    import:           common-settings
    -- Directories containing source files.
    hs-source-dirs:   test
    -- Enables the timeout during the tests to work properly
    ghc-options:      -threaded
    build-depends:    lsystems,
                      tasty >=1.1 && <1.4

test-suite lsystems-test
    import:           test-common
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    -- The entrypoint to the test suite.
    main-is:          Tests.hs
    other-modules:    IC.Approx, IC.Exact
    build-depends:    tasty-hunit >=0.9 && <0.11
